doc: Update source files (en .po), for translations

--- a/documentation/content/en/articles/freebsd-status-report-process/_index.po
+++ b/documentation/content/en/articles/freebsd-status-report-process/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-04-20 21:10-0300\n"
+"POT-Creation-Date: 2025-01-24 10:22-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -82,7 +82,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:40
-msgid "_Do not assume that the person reading the report knows about your project._"
+msgid ""
+"_Do not assume that the person reading the report knows about your project._"
 msgstr ""
 
 #. type: Plain text
@@ -159,7 +160,7 @@ msgid ""
 "And then they stop.  Maybe the reader is an avid Cyberdyne fan and knows "
 "what exciting new features the T800 brings.  This is unlikely.  It is far "
 "more likely that they have vaguely heard of whatever you have imported "
-"(especially into the ports tree: remember that there are over 30,000 other "
+"(especially into the ports tree: remember that there are over 35,000 other "
 "things there too...).  List some of the new features, or bug fixes.  Tell "
 "them why it is a good thing that we have the new version."
 msgstr ""
@@ -262,10 +263,10 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:124
 msgid ""
-"submit a pull request to the doc repository through "
-"link:https://github.com/freebsd/freebsd-doc[its GitHub mirror] .  You should "
-"put your reports in the appropriate subdirectory of "
-"`doc/website/content/en/status` (create it if it is missing);"
+"submit a pull request to the doc repository through link:https://github.com/"
+"freebsd/freebsd-doc[its GitHub mirror] .  You should put your reports in the "
+"appropriate subdirectory of `doc/website/content/en/status` (create it if it "
+"is missing);"
 msgstr ""
 
 #. type: Plain text
@@ -306,9 +307,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:141
 #, no-wrap
-msgid ""
-"Status reports archived GitHub repository (was used for reports from 2017Q4 "
-"to 2022Q4):"
+msgid "Status reports archived GitHub repository (was used for reports from 2017Q4 to 2022Q4):"
 msgstr ""
 
 #. type: Table
@@ -386,10 +385,9 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:165
 msgid ""
-"All report submissions can have the deadline extended by "
-"link:mailto:status-submissions@FreeBSD.org[emailing the status team] up "
-"until the extended deadline, which is 8 days after the end of the quarter.  "
-"Entries from the "
+"All report submissions can have the deadline extended by link:mailto:status-"
+"submissions@FreeBSD.org[emailing the status team] up until the extended "
+"deadline, which is 8 days after the end of the quarter.  Entries from the "
 "link:https://www.freebsd.org/administration/#t-portmgr[ports management "
 "team] default to the extended headline, because of the overlap between "
 "status reports and quarterly ports branches."
@@ -624,9 +622,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:216
 msgid ""
-"the "
-"link:https://lists.freebsd.org/subscription/freebsd-status-calls[freebsd-status-calls@FreeBSD.org "
-"mailing list];"
+"the link:https://lists.freebsd.org/subscription/freebsd-status-calls[freebsd-"
+"status-calls@FreeBSD.org mailing list];"
 msgstr ""
 
 #. type: Plain text
@@ -648,7 +645,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:220
-msgid "link:mailto:secretary@asiabsdcon.org[AsiaBSDCon] in March (First Quarter);"
+msgid ""
+"link:mailto:secretary@asiabsdcon.org[AsiaBSDCon] in March (First Quarter);"
 msgstr ""
 
 #. type: Plain text
@@ -680,8 +678,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:228
 msgid ""
-"The easiest way to send calls for status reports is to use the "
-"link:https://cgit.freebsd.org/doc/tree/tools/sendcalls/sendcalls[[.filename]#sendcalls# "
+"The easiest way to send calls for status reports is to use the link:https://"
+"cgit.freebsd.org/doc/tree/tools/sendcalls/sendcalls[[.filename]#sendcalls# "
 "perl script] in the [.filename]#tools/sendcalls# directory of the doc git "
 "repository.  The script automatically sends calls to all intended "
 "recipients.  It can also be used through a cron job, for example:"
@@ -690,9 +688,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:231
 #, no-wrap
-msgid ""
-"0      0       1,15,24 3,6,9,12        *       cd ~/doc/tools/sendcalls && "
-"git pull && ./sendcalls -s 'Lorenzo Salvadore'\n"
+msgid "0      0       1,15,24 3,6,9,12        *       cd ~/doc/tools/sendcalls && git pull && ./sendcalls -s 'Lorenzo Salvadore'\n"
 msgstr ""
 
 #. type: delimited block = 4
@@ -708,9 +704,9 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:240
 msgid ""
-"It may also be worth making a call for reports on the forums as "
-"link:https://forums.freebsd.org/threads/call-for-freebsd-2014q4-october-december-status-reports.49812/[was "
-"done in the past]."
+"It may also be worth making a call for reports on the forums as link:https://"
+"forums.freebsd.org/threads/call-for-freebsd-2014q4-october-december-status-"
+"reports.49812/[was done in the past]."
 msgstr ""
 
 #. type: Title ===
@@ -755,7 +751,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:254
-msgid "When all the files of the status report are ready, it is time to publish it."
+msgid ""
+"When all the files of the status report are ready, it is time to publish it."
 msgstr ""
 
 #. type: Plain text
@@ -770,8 +767,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:259
 msgid ""
-"Then the news entry for the main website page is added to "
-"[.filename]#doc/website/data/en/news/news.toml#."
+"Then the news entry for the main website page is added to [.filename]#doc/"
+"website/data/en/news/news.toml#."
 msgstr ""
 
 #. type: Plain text
@@ -786,9 +783,7 @@ msgid ""
 "[[news]]\n"
 "date = \"2021-01-16\"\n"
 "title = \"October-December 2020 Status Report\"\n"
-"description = \"The <a "
-"href=\\\"https://www.FreeBSD.org/status/report-2020-10-2020-12.html\\\">October "
-"to December 2020 Status Report</a> is now available with 42 entries.\"\n"
+"description = \"The <a href=\\\"https://www.FreeBSD.org/status/report-2020-10-2020-12.html\\\">October to December 2020 Status Report</a> is now available with 42 entries.\"\n"
 msgstr ""
 
 #. type: Plain text
@@ -801,9 +796,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:271
 #, no-wrap
-msgid ""
-"% w3m -cols 80 -dump https://www.FreeBSD.org/status/report-2021-01-2021-03/ "
-"> /tmp/report-2021-01-2021-03.txt\n"
+msgid "% w3m -cols 80 -dump https://www.FreeBSD.org/status/report-2021-01-2021-03/ > /tmp/report-2021-01-2021-03.txt\n"
 msgstr ""
 
 #. type: Plain text
@@ -838,8 +831,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:282
 msgid ""
-"one to "
-"link:https://lists.freebsd.org/subscription/freebsd-announce[freebsd-announce@FreeBSD.org];"
+"one to link:https://lists.freebsd.org/subscription/freebsd-announce[freebsd-"
+"announce@FreeBSD.org];"
 msgstr ""
 
 #. type: delimited block = 4
@@ -853,11 +846,9 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:288
 msgid ""
-"one to "
-"link:https://lists.freebsd.org/subscription/freebsd-hackers[freebsd-hackers@FreeBSD.org], "
-"which also has "
-"link:https://lists.freebsd.org/subscription/freebsd-current[freebsd-current@FreeBSD.org] "
-"and "
-"link:https://lists.freebsd.org/subscription/freebsd-stable[freebsd-stable@FreeBSD.org] "
-"in CC and `developers@FreeBSD.org` in BCC."
+"one to link:https://lists.freebsd.org/subscription/freebsd-hackers[freebsd-"
+"hackers@FreeBSD.org], which also has link:https://lists.freebsd.org/"
+"subscription/freebsd-current[freebsd-current@FreeBSD.org] and link:https://"
+"lists.freebsd.org/subscription/freebsd-stable[freebsd-stable@FreeBSD.org] in "
+"CC and `developers@FreeBSD.org` in BCC."
 msgstr ""
