--- a/documentation/content/en/books/handbook/filesystems/_index.po
+++ b/documentation/content/en/books/handbook/filesystems/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-07-15 16:41-0300\n"
+"POT-Creation-Date: 2025-01-24 10:22-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,94 +47,87 @@ msgid "Synopsis"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:60
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:57
 msgid ""
-"File systems are an integral part of any operating system.  They allow users "
-"to upload and store files, provide access to data, and make hard drives "
-"useful.  Different operating systems differ in their native file system.  "
-"Traditionally, the native FreeBSD file system has been the Unix File System "
-"UFS which has been modernized as UFS2.  Since FreeBSD 7.0, the Z File System "
-"(ZFS) is also available as a native file system.  See crossref:zfs[zfs,The Z "
-"File System (ZFS)] for more information."
+"File systems are a fundamental component of any operating system.  They "
+"enable users to store, manage, and access data, making storage devices like "
+"hard drives, flash drives, and USB storage devices practical for everyday "
+"use.  Different operating systems use different file systems natively."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:63
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:61
 msgid ""
-"In addition to its native file systems, FreeBSD supports a multitude of "
-"other file systems so that data from other operating systems can be accessed "
-"locally, such as data stored on locally attached USB storage devices, flash "
-"drives, and hard disks.  This includes support for the Linux(R) Extended "
-"File System (EXT)."
+"FreeBSD has traditionally used the Unix File System (UFS), with the "
+"modernized UFS2 as its primary native file system.  FreeBSD also uses the Z "
+"File System (ZFS), known for its advanced features, robustness, and "
+"reliability.  See crossref:zfs[zfs,The Z File System (ZFS)] for more details."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:67
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:64
 msgid ""
-"There are different levels of FreeBSD support for the various file systems.  "
-"Some require a kernel module to be loaded and others may require a toolset "
-"to be installed.  Some non-native file system support is full read-write "
-"while others are read-only."
+"In addition to its native file systems, FreeBSD supports a broad range of "
+"file systems from other operating systems.  Support for these file systems "
+"varies, some require loading kernel modules, while others need additional "
+"userland tools."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:69
-msgid "After reading this chapter, you will know:"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:71
-msgid "The difference between native and supported file systems."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:72
-msgid "Which file systems are supported by FreeBSD."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:73
-msgid ""
-"How to enable, configure, access, and make use of non-native file systems."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:75
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:66
 msgid "Before reading this chapter, you should:"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:77
-msgid "Understand UNIX(R) and crossref:basics[basics,FreeBSD basics]."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:78
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:68
 msgid ""
-"Be familiar with the basics of crossref:kernelconfig[kernelconfig,kernel "
-"configuration and compilation]."
+"Be familiar with UNIX(R) concepts and crossref:basics[basics,FreeBSD basics]."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:79
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:69
 msgid "Feel comfortable crossref:ports[ports,installing software] in FreeBSD."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:80
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:70
 msgid ""
-"Have some familiarity with crossref:disks[disks,disks], storage, and device "
-"names in FreeBSD."
+"Have some understanding of crossref:disks[disks,disks], storage devices, and "
+"FreeBSD's naming conventions for devices."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:72
+msgid "After reading this chapter, you will:"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:74
+msgid "Understand the differences between native and supported file systems."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:75
+msgid ""
+"Know which file systems are supported by FreeBSD and the level of support "
+"available."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:76
+msgid ""
+"Learn how to enable, configure, access, and work with non-native file "
+"systems."
 msgstr ""
 
 #. type: Title ==
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:82
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:78
 #, no-wrap
 msgid "Linux(R) File Systems"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:86
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:82
 msgid ""
 "FreeBSD provides built-in support for several Linux(R) file systems.  This "
 "section demonstrates how to load support for and how to mount the supported "
@@ -142,34 +135,260 @@ msgid ""
 msgstr ""
 
 #. type: Title ===
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:87
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:84
 #, no-wrap
-msgid "ext2 / ext3 / ext4"
+msgid "Extended File System (EXT)"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:91
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:88
 msgid ""
-"Kernel support for ext2 file systems has been available since FreeBSD 2.2.  "
-"The man:ext2fs[5] driver allows the FreeBSD kernel to both read and write to "
-"ext2, ext3, and ext4 file systems."
+"Kernel support for Extended File System (EXT) file systems has been "
+"available since FreeBSD 2.2.  The man:ext2fs[5] driver allows the FreeBSD "
+"kernel to both read and write to ext2, ext3, and ext4 file systems."
 msgstr ""
 
 #. type: delimited block = 4
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:95
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:92
 msgid "Journalling and encryption are not supported yet."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:99
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:96
 msgid ""
 "To access an ext file system, mount the ext volume by specifying its FreeBSD "
-"partition name and an existing mount point.  This example mounts [."
-"filename]#/dev/ada1s1# on [.filename]#/mnt#:"
+"partition name and an existing mount point.  This example mounts "
+"[.filename]#/dev/ada1s1# on [.filename]#/mnt#:"
 msgstr ""
 
 #. type: delimited block . 4
-#: documentation/content/en/books/handbook/filesystems/_index.adoc:103
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:100
 #, no-wrap
 msgid "# mount -t ext2fs /dev/ada1s1 /mnt\n"
+msgstr ""
+
+#. type: Title ==
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:103
+#, no-wrap
+msgid "Windows(R) File Systems"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:106
+msgid ""
+"FreeBSD supports FAT, exFAT, and NTFS file systems, enabling access to "
+"Windows-formatted storage."
+msgstr ""
+
+#. type: Title ===
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:108
+#, no-wrap
+msgid "FAT File System"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:112
+msgid ""
+"The FAT file system is a simple and robust file system.  Although it lacks "
+"the performance, reliability, and scalability of modern alternatives, its "
+"availability on many different operating systems makes it a common choice "
+"for data exchange between devices."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:115
+msgid ""
+"To access a FAT file system, mount the FAT volume by specifying its FreeBSD "
+"partition name and an existing mount point.  This example mounts "
+"[.filename]#/dev/ada0s1# on [.filename]#/mnt#:"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:119
+#, no-wrap
+msgid "# mount -t msdosfs /dev/ada0s1 /mnt\n"
+msgstr ""
+
+#. type: Title ===
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:122
+#, no-wrap
+msgid "exFAT File System"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:126
+msgid ""
+"exFAT (Extended File Allocation Table) is a lightweight file system "
+"optimized for flash storage devices, such as USB drives and SD cards.  It "
+"supports large file sizes and is widely used across various platforms, "
+"making it ideal for external storage."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:128
+msgid ""
+"To use exFAT on FreeBSD, install the package:filesystems/exfat[] package, "
+"load the FUSE kernel module, and mount the file system as shown below:"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:130
+msgid "Install the exFAT package:"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:134
+#, no-wrap
+msgid "# pkg install exfat\n"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:137
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:174
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:216
+msgid "Before using a FUSE file system, load the man:fusefs[5] kernel module:"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:141
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:178
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:220
+#, no-wrap
+msgid "# kldload fusefs\n"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:144
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:181
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:223
+msgid "Use man:sysrc[8] to load the module at startup:"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:148
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:185
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:227
+#, no-wrap
+msgid "# sysrc kld_list+=fusefs\n"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:152
+msgid ""
+"Mount the exFAT volumne by specifying its FreeBSD partition name and an "
+"existing mount point.  This example mounts [.filename]#/dev/ada0s1# on "
+"[.filename]#/mnt#:"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:156
+#, no-wrap
+msgid "# mount.exfat /dev/ada0s1 /mnt\n"
+msgstr ""
+
+#. type: Title ===
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:159
+#, no-wrap
+msgid "NTFS File System"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:163
+msgid ""
+"NTFS is a robust file system developed by Microsoft(R) and commonly used in "
+"Windows operating systems.  FreeBSD provides full read and write support for "
+"NTFS through the package:filesystems/ntfs[] package, making it easy to "
+"access and modify NTFS-formatted storage devices."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:165
+msgid ""
+"To use NTFS on FreeBSD, install the package:filesystems/ntfs[] package, load "
+"the FUSE kernel module, and mount the file system as shown below:"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:167
+msgid "Install the NTFS package:"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:171
+#, no-wrap
+msgid "# pkg install ntfs\n"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:189
+msgid ""
+"Mount the NTFS volumne by specifying its FreeBSD partition name and an "
+"existing mount point.  This example mounts [.filename]#/dev/ada0s1# on "
+"[.filename]#/mnt#:"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:193
+#, no-wrap
+msgid "# ntfs-3g /dev/ada0s1 /mnt\n"
+msgstr ""
+
+#. type: Title ==
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:196
+#, no-wrap
+msgid "MacOS(R) File Systems"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:199
+msgid ""
+"FreeBSD provides support for MacOS(R) file systems, including HFS/HFS+, "
+"allowing access to storage devices formatted for Apple(R) systems."
+msgstr ""
+
+#. type: Title ===
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:201
+#, no-wrap
+msgid "HFS/HFS+ File System"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:205
+msgid ""
+"HFS/HFS+ was the primary file system for MacOS prior to APFS, commonly used "
+"on older Mac devices and external drives.  FreeBSD provides read-only "
+"support for HFS/HFS+ through the package:filesystems/hfsfuse[] package."
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:207
+msgid ""
+"To use HFS/HFS+ on FreeBSD, install the package:filesystems/hfsfuse[] "
+"package, load the FUSE kernel module, and mount the file system as shown "
+"below:"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:209
+msgid "Install the HFS/HFS+ package:"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:213
+#, no-wrap
+msgid "# pkg install fusefs-hfsfuse\n"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:231
+msgid ""
+"Mount the HFS/HFS+ volumne by specifying its FreeBSD partition name and an "
+"existing mount point.  This example mounts [.filename]#/dev/ada0s1# on "
+"[.filename]#/mnt#:"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/handbook/filesystems/_index.adoc:235
+#, no-wrap
+msgid "# hfsfuse /dev/ada0s1 /mnt\n"
 msgstr ""
