--- a/documentation/content/en/books/porters-handbook/testing/_index.po
+++ b/documentation/content/en/books/porters-handbook/testing/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-12-29 08:30-0500\n"
+"POT-Creation-Date: 2025-01-24 10:21-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,8 +58,8 @@ msgid ""
 "It is important to be able to generate this file no matter what options are "
 "present in [.filename]#make.conf#, so please avoid doing things such as "
 "using `.error` statements when (for instance) a dependency is not "
-"satisfied.  (See crossref:porting-dads[dads-dot-error,Avoid Use of the `."
-"error` Construct].)"
+"satisfied.  (See crossref:porting-dads[dads-dot-error,Avoid Use of the "
+"`.error` Construct].)"
 msgstr ""
 
 #. type: Plain text
@@ -203,9 +203,9 @@ msgstr ""
 msgid ""
 "`port` is the front-end script, which can help simplify the testing job.  "
 "Whenever a new port or an update to an existing one needs testing, use `port "
-"test` to test the port, including the crossref:testing[testing-portlint,"
-"`portlint`] checking.  This command also detects and lists any files that "
-"are not listed in [.filename]#pkg-plist#.  For example:"
+"test` to test the port, including the crossref:testing[testing-"
+"portlint,`portlint`] checking.  This command also detects and lists any "
+"files that are not listed in [.filename]#pkg-plist#.  For example:"
 msgstr ""
 
 #. type: delimited block . 4
@@ -223,9 +223,9 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/testing/_index.adoc:141
 msgid ""
-"`PREFIX` determines where the port will be installed.  It defaults to [."
-"filename]#/usr/local#, but can be set by the user to a custom path like [."
-"filename]#/opt#.  The port must respect the value of this variable."
+"`PREFIX` determines where the port will be installed.  It defaults to "
+"[.filename]#/usr/local#, but can be set by the user to a custom path like "
+"[.filename]#/opt#.  The port must respect the value of this variable."
 msgstr ""
 
 #. type: Plain text
@@ -311,8 +311,8 @@ msgstr ""
 msgid ""
 "These tests will not find hard-coded paths inside the port's files, nor will "
 "it verify that `LOCALBASE` is being used to correctly refer to files from "
-"other ports.  The temporarily installed port in [.filename]#/var/tmp/`make -"
-"V PORTNAME`# must be tested for proper operation to make sure there are no "
+"other ports.  The temporarily installed port in [.filename]#/var/tmp/`make "
+"-V PORTNAME`# must be tested for proper operation to make sure there are no "
 "problems with paths."
 msgstr ""
 
@@ -329,8 +329,8 @@ msgstr ""
 msgid ""
 "Refer to programs and files from other ports with the variables mentioned "
 "above, not explicit pathnames.  For instance, if the port requires a macro "
-"`PAGER` to have the full pathname of `less`, do not use a literal path of [."
-"filename]#/usr/local/bin/less#.  Instead, use `${LOCALBASE}`:"
+"`PAGER` to have the full pathname of `less`, do not use a literal path of "
+"[.filename]#/usr/local/bin/less#.  Instead, use `${LOCALBASE}`:"
 msgstr ""
 
 #. type: delimited block . 4
@@ -445,8 +445,8 @@ msgstr ""
 msgid ""
 "The examples in this section show a default file layout, as standard in "
 "FreeBSD.  Substitute any local changes accordingly.  The ports tree, "
-"represented by `${PORTSDIR}`, is located in [.filename]#/usr/ports#.  Both "
-"`${LOCALBASE}` and `${PREFIX}` are [.filename]#/usr/local# by default."
+"represented by `${PORTSDIR}`, is located in [.filename]#/usr/ports#.  Both `$"
+"{LOCALBASE}` and `${PREFIX}` are [.filename]#/usr/local# by default."
 msgstr ""
 
 #. type: Title ===
@@ -603,9 +603,8 @@ msgstr ""
 msgid ""
 "Fetch a `13.1-RELEASE` for `amd64` from the FTP server given by "
 "`FREEBSD_HOST` in [.filename]#poudriere.conf#, create the zfs file system "
-"`tank/poudriere/jails/131Ramd64`, mount it on [.filename]#/poudriere/"
-"jails/131Ramd64# and extract the `13.1-RELEASE` tarballs into this file "
-"system."
+"`tank/poudriere/jails/131Ramd64`, mount it on [.filename]#/poudriere/jails/"
+"131Ramd64# and extract the `13.1-RELEASE` tarballs into this file system."
 msgstr ""
 
 #. type: delimited block . 4
@@ -619,10 +618,10 @@ msgstr ""
 msgid ""
 "Create `tank/poudriere/jails/12i386`, mount it on [.filename]#/poudriere/"
 "jails/12i386#, then check out the tip of the Git branch of `FreeBSD-12-"
-"STABLE` from `GIT_HOST` in [.filename]#poudriere.conf# or the default `git."
-"freebsd.org` into [.filename]#/poudriere/jails/12i386/usr/src#, then "
-"complete a `buildworld` and install it into [.filename]#/poudriere/"
-"jails/12i386#."
+"STABLE` from `GIT_HOST` in [.filename]#poudriere.conf# or the default "
+"`git.freebsd.org` into [.filename]#/poudriere/jails/12i386/usr/src#, then "
+"complete a `buildworld` and install it into [.filename]#/poudriere/jails/"
+"12i386#."
 msgstr ""
 
 #. type: delimited block = 4
@@ -737,8 +736,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/testing/_index.adoc:386
 msgid ""
-"These commands create `tank/poudriere/ports/default`, mount it on [."
-"filename]#/poudriere/ports/default#, and populate it using Git.  Afterward "
+"These commands create `tank/poudriere/ports/default`, mount it on "
+"[.filename]#/poudriere/ports/default#, and populate it using Git.  Afterward "
 "it is included in the list of known ports trees:"
 msgstr ""
 
@@ -951,7 +950,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/porters-handbook/testing/_index.adoc:509
 #, no-wrap
-msgid "# poudriere testport -c -o www/firefox\n"
+msgid "# poudriere testport -j 131Ramd64 -c -o www/firefox\n"
 msgstr ""
 
 #. type: Plain text
@@ -1095,10 +1094,10 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/testing/_index.adoc:578
 msgid ""
-"Similar to using sets, poudriere will also use a custom [.filename]#make."
-"conf# if it is provided.  No special command line argument is necessary.  "
-"Instead, poudriere looks for existing files matching a name scheme derived "
-"from the command line.  For instance:"
+"Similar to using sets, poudriere will also use a custom "
+"[.filename]#make.conf# if it is provided.  No special command line argument "
+"is necessary.  Instead, poudriere looks for existing files matching a name "
+"scheme derived from the command line.  For instance:"
 msgstr ""
 
 #. type: Plain text
@@ -1140,8 +1139,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/testing/_index.adoc:593
 msgid ""
-"[.filename]#/usr/local/etc/poudriere.d/131Ramd64-development-devset-make."
-"conf#"
+"[.filename]#/usr/local/etc/poudriere.d/131Ramd64-development-devset-"
+"make.conf#"
 msgstr ""
 
 #. type: Plain text
@@ -1149,11 +1148,11 @@ msgstr ""
 msgid ""
 "Unlike with sets, all of the found files will be appended, _in that order_, "
 "into one [.filename]#make.conf# inside the build jails.  It is hence "
-"possible to have general make variables, intended to affect all builds in [."
-"filename]#/usr/local/etc/poudriere.d/make.conf#.  Special variables, "
-"intended to affect only certain jails or sets can be set in specialised [."
-"filename]#make.conf# files, such as [.filename]#/usr/local/etc/poudriere."
-"d/131Ramd64-development-devset-make.conf#."
+"possible to have general make variables, intended to affect all builds in "
+"[.filename]#/usr/local/etc/poudriere.d/make.conf#.  Special variables, "
+"intended to affect only certain jails or sets can be set in specialised "
+"[.filename]#make.conf# files, such as [.filename]#/usr/local/etc/poudriere.d/"
+"131Ramd64-development-devset-make.conf#."
 msgstr ""
 
 #. type: Block title
@@ -1179,8 +1178,8 @@ msgstr ""
 #. type: delimited block * 4
 #: documentation/content/en/books/porters-handbook/testing/_index.adoc:612
 msgid ""
-"Note the use of `+=` so that if the variable is already set in the default [."
-"filename]#make.conf# its content will not be overwritten."
+"Note the use of `+=` so that if the variable is already set in the default "
+"[.filename]#make.conf# its content will not be overwritten."
 msgstr ""
 
 #. type: Title ===
@@ -1205,10 +1204,11 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/testing/_index.adoc:630
 msgid ""
-"will scan the distfiles folder, `DISTFILES_CACHE` in [.filename]#poudriere."
-"conf#, versus the ports tree given by the `-p _portstree_` argument and "
-"prompt for removal of those distfiles.  To skip the prompt and remove all "
-"unused files unconditionally, the `-y` argument can be added:"
+"will scan the distfiles folder, `DISTFILES_CACHE` in "
+"[.filename]#poudriere.conf#, versus the ports tree given by the `-p "
+"_portstree_` argument and prompt for removal of those distfiles.  To skip "
+"the prompt and remove all unused files unconditionally, the `-y` argument "
+"can be added:"
 msgstr ""
 
 #. type: delimited block . 4
