--- a/documentation/content/en/books/handbook/mirrors/_index.po
+++ b/documentation/content/en/books/handbook/mirrors/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-12-29 08:30-0500\n"
+"POT-Creation-Date: 2025-01-24 10:22-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1008,7 +1008,6 @@ msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/mirrors/_index.adoc:311
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:444
 #, no-wrap
 msgid "Introduction"
 msgstr ""
@@ -1039,7 +1038,6 @@ msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/mirrors/_index.adoc:325
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:470
 #, no-wrap
 msgid "Installation"
 msgstr ""
@@ -1228,7 +1226,6 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/mirrors/_index.adoc:390
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:545
 msgid ""
 "The update is much quicker than a checkout, only transferring files that "
 "have changed."
@@ -1243,8 +1240,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/mirrors/_index.adoc:394
 msgid ""
-"The FreeBSD project uses cgit as the web-based repository browser: link:"
-"https://cgit.FreeBSD.org/[https://cgit.FreeBSD.org/]."
+"The FreeBSD project uses cgit as the web-based repository browser: "
+"link:https://cgit.FreeBSD.org/[https://cgit.FreeBSD.org/]."
 msgstr ""
 
 #. type: Title ===
@@ -1374,8 +1371,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/mirrors/_index.adoc:431
 msgid ""
-"ED25519 key fingerprint is `SHA256:"
-"lNR6i4BEOaaUhmDHBA1WJsO7H3KtvjE2r5q4sOxtIWo`"
+"ED25519 key fingerprint is "
+"`SHA256:lNR6i4BEOaaUhmDHBA1WJsO7H3KtvjE2r5q4sOxtIWo`"
 msgstr ""
 
 #. type: Plain text
@@ -1398,8 +1395,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/mirrors/_index.adoc:436
 msgid ""
-"ED25519 key fingerprint is `SHA256:"
-"y1ljKrKMD3lDObRUG3xJ9gXwEIuqnh306tSyFd1tuZE`"
+"ED25519 key fingerprint is "
+"`SHA256:y1ljKrKMD3lDObRUG3xJ9gXwEIuqnh306tSyFd1tuZE`"
 msgstr ""
 
 #. type: Plain text
@@ -1416,292 +1413,16 @@ msgstr ""
 #. type: Title ==
 #: documentation/content/en/books/handbook/mirrors/_index.adoc:441
 #, no-wrap
-msgid "Using Subversion"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:451
-msgid ""
-"As of December 2020, FreeBSD uses git as the primary version control system "
-"for storing all of FreeBSD's source code and documentation.  Changes from "
-"the git repo on the `stable/11`, `stable/12` and related releng branches are "
-"exported to the Subversion repository.  This export will continue through "
-"the life of these branches.  From July 2012 to March 2021, FreeBSD used "
-"Subversion as the only version control system for storing all of FreeBSD's "
-"Ports Collection.  As of April 2021, FreeBSD uses git as the only version "
-"control system for storing all of FreeBSD's Ports Collection."
-msgstr ""
-
-#. type: delimited block = 4
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:457
-msgid ""
-"Subversion is generally a developer tool.  Users may prefer to use `freebsd-"
-"update` (crossref:cutting-edge[updating-upgrading-freebsdupdate,“FreeBSD "
-"Update”]) to update the FreeBSD base system, and `git` (crossref:ports[ports-"
-"using,“Using the Ports Collection”]) to update the FreeBSD Ports "
-"Collection.  After March 2021, Subversion use is only for legacy branches "
-"(`stable/11` and `stable/12`)."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:460
-msgid ""
-"This section demonstrates how to install Subversion on a FreeBSD system and "
-"use it to create a local copy of a FreeBSD repository. Additional "
-"information on the use of Subversion is included."
-msgstr ""
-
-#. type: Title ===
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:462
-#, no-wrap
-msgid "Svnlite"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:466
-msgid ""
-"A lightweight version of Subversion is already installed on FreeBSD as "
-"`svnlite`.  The port or package version of Subversion is only needed if the "
-"Python or Perl API is needed, or if a later version of Subversion is desired."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:468
-msgid ""
-"The only difference from normal Subversion use is that the command name is "
-"`svnlite`."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:473
-msgid ""
-"If `svnlite` is unavailable or the full version of Subversion is needed, "
-"then it must be installed."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:475
-msgid "Subversion can be installed from the Ports Collection:"
-msgstr ""
-
-#. type: delimited block . 4
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:480
-#, no-wrap
-msgid ""
-"# cd /usr/ports/devel/subversion\n"
-"# make install clean\n"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:483
-msgid "Subversion can also be installed as a package:"
-msgstr ""
-
-#. type: delimited block . 4
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:487
-#, no-wrap
-msgid "# pkg install subversion\n"
-msgstr ""
-
-#. type: Title ===
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:490
-#, no-wrap
-msgid "Running Subversion"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:494
-msgid ""
-"To fetch a clean copy of the sources into a local directory, use `svn`.  The "
-"files in this directory are called a _local working copy_."
-msgstr ""
-
-#. type: delimited block = 4
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:499
-msgid ""
-"Move or delete an existing destination directory before using `checkout` for "
-"the first time.  Checkout over an existing non-`svn` directory can cause "
-"conflicts between the existing files and those brought in from the "
-"repository."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:505
-msgid ""
-"Subversion uses URLs to designate a repository, taking the form of "
-"_protocol://hostname/path_.  The first component of the path is the FreeBSD "
-"repository to access.  There are three different repositories, `base` for "
-"the FreeBSD base system source code, `ports` for the Ports Collection, and "
-"`doc` for documentation.  For example, the URL `https://svn.FreeBSD.org/base/"
-"head/` specifies the main branch of the src repository, using the `https` "
-"protocol."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:507
-msgid ""
-"A checkout from a given repository is performed with a command like this:"
-msgstr ""
-
-#. type: delimited block . 4
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:511
-#, no-wrap
-msgid "# svn checkout https://svn.FreeBSD.org/repository/branch lwcdir\n"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:514
-msgid "where:"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:516
-msgid ""
-"_repository_ is one of the Project repositories: `base`, `ports`, or `doc`."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:517
-msgid ""
-"_branch_ depends on the repository used. `ports` and `doc` are mostly "
-"updated in the `head` branch, while `base` maintains the latest version of -"
-"CURRENT under `head` and the respective latest versions of the -STABLE "
-"branches under `stable/11` (11._x_) and `stable/12` (12._x_)."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:518
-msgid ""
-"_lwcdir_ is the target directory where the contents of the specified branch "
-"should be placed. This is usually [.filename]#/usr/ports# for `ports`, [."
-"filename]#/usr/src# for `base`, and [.filename]#/usr/doc# for `doc`."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:521
-msgid ""
-"This example checks out the Source Tree from the FreeBSD repository using "
-"the HTTPS protocol, placing the local working copy in [.filename]#/usr/"
-"src#.  If [.filename]#/usr/src# is already present but was not created by "
-"`svn`, remember to rename or delete it before the checkout."
-msgstr ""
-
-#. type: delimited block . 4
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:525
-#, no-wrap
-msgid "# svn checkout https://svn.FreeBSD.org/base/head /usr/src\n"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:529
-msgid ""
-"Because the initial checkout must download the full branch of the remote "
-"repository, it can take a while.  Please be patient."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:531
-msgid ""
-"After the initial checkout, the local working copy can be updated by running:"
-msgstr ""
-
-#. type: delimited block . 4
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:535
-#, no-wrap
-msgid "# svn update lwcdir\n"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:538
-msgid "To update [.filename]#/usr/src# created in the example above, use:"
-msgstr ""
-
-#. type: delimited block . 4
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:542
-#, no-wrap
-msgid "# svn update /usr/src\n"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:549
-msgid ""
-"An alternate way of updating the local working copy after checkout is "
-"provided by the [.filename]#Makefile# in the [.filename]#/usr/ports#, [."
-"filename]#/usr/src#, and [.filename]#/usr/doc# directories.  Set "
-"`SVN_UPDATE` and use the `update` target.  For example, to update [."
-"filename]#/usr/src#:"
-msgstr ""
-
-#. type: delimited block . 4
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:554
-#, no-wrap
-msgid ""
-"# cd /usr/src\n"
-"# make update SVN_UPDATE=yes\n"
-msgstr ""
-
-#. type: Title ===
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:557
-#, no-wrap
-msgid "Subversion Mirror Sites"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:560
-msgid "The FreeBSD Subversion repository is:"
-msgstr ""
-
-#. type: delimited block . 4
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:564
-#, no-wrap
-msgid "svn.FreeBSD.org\n"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:568
-msgid ""
-"This is a publicly accessible mirror network that uses GeoDNS to select an "
-"appropriate back end server.  To view the FreeBSD Subversion repositories "
-"through a browser, use https://svnweb.FreeBSD.org/[https://svnweb.FreeBSD."
-"org/]."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:570
-msgid ""
-"HTTPS is the preferred protocol, but the [.filename]#security/ca_root_nss# "
-"package will need to be installed in order to automatically validate "
-"certificates."
-msgstr ""
-
-#. type: Title ===
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:571
-#, no-wrap
-msgid "For More Information"
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:574
-msgid ""
-"For other information about using Subversion, please see the \"Subversion "
-"Book\", titled http://svnbook.red-bean.com/[Version Control with "
-"Subversion], or the http://subversion.apache.org/docs/[Subversion "
-"Documentation]."
-msgstr ""
-
-#. type: Title ==
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:576
-#, no-wrap
 msgid "Disc Copies"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:579
+#: documentation/content/en/books/handbook/mirrors/_index.adoc:444
 msgid "FreeBSD disc copies are available from several online retailers:"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:589
+#: documentation/content/en/books/handbook/mirrors/_index.adoc:454
 #, no-wrap
 msgid ""
 "FreeBSD Mall, Inc.\n"
@@ -1716,7 +1437,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:592
+#: documentation/content/en/books/handbook/mirrors/_index.adoc:457
 #, no-wrap
 msgid ""
 "Getlinux\n"
@@ -1724,7 +1445,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/mirrors/_index.adoc:599
+#: documentation/content/en/books/handbook/mirrors/_index.adoc:464
 #, no-wrap
 msgid ""
 "Dr. Hinner EDV\n"
