--- a/documentation/content/en/books/porters-handbook/security/_index.po
+++ b/documentation/content/en/books/porters-handbook/security/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-09-14 14:59-0300\n"
+"POT-Creation-Date: 2025-01-24 10:21-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -92,12 +92,12 @@ msgid ""
 "initially appear in the original distribution or in the port files.  In the "
 "former case, the original software developer is likely to release a patch or "
 "a new version instantly.  Update the port promptly with respect to the "
-"author's fix.  If the fix is delayed for some reason, either crossref:"
-"porting-dads[dads-noinstall,mark the port as `FORBIDDEN`] or introduce a "
-"patch file to the port.  In the case of a vulnerable port, just fix the port "
-"as soon as possible.  In either case, follow crossref:port-upgrading[port-"
-"upgrading,the standard procedure for submitting changes] unless having "
-"rights to commit it directly to the ports tree."
+"author's fix.  If the fix is delayed for some reason, either "
+"crossref:porting-dads[dads-noinstall,mark the port as `FORBIDDEN`] or "
+"introduce a patch file to the port.  In the case of a vulnerable port, just "
+"fix the port as soon as possible.  In either case, follow crossref:port-"
+"upgrading[port-upgrading,the standard procedure for submitting changes] "
+"unless having rights to commit it directly to the ports tree."
 msgstr ""
 
 #. type: delimited block = 4
@@ -173,13 +173,13 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/security/_index.adoc:120
 msgid ""
-"The VuXML database is an XML document.  Its source file [.filename]#vuln."
-"xml# is kept right inside the port package:security/vuxml[].  Therefore the "
-"file's full pathname will be [.filename]#PORTSDIR/security/vuxml/vuln.xml#.  "
-"Each time a security vulnerability is discovered in a port, please add an "
-"entry for it to that file.  Until familiar with VuXML, the best thing to do "
-"is to find an existing entry fitting the case at hand, then copy it and use "
-"it as a template."
+"The VuXML database is an XML document.  Its source file "
+"[.filename]#vuln.xml# is kept right inside the port package:security/"
+"vuxml[].  Therefore the file's full pathname will be [.filename]#PORTSDIR/"
+"security/vuxml/vuln.xml#.  Each time a security vulnerability is discovered "
+"in a port, please add an entry for it to that file.  Until familiar with "
+"VuXML, the best thing to do is to find an existing entry fitting the case at "
+"hand, then copy it and use it as a template."
 msgstr ""
 
 #. type: Title ===
@@ -554,6 +554,24 @@ msgid "1 problem(s) in the installed packages found.\n"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/porters-handbook/security/_index.adoc:315
+#: documentation/content/en/books/porters-handbook/security/_index.adoc:316
 msgid "The former version matches while the latter one does not."
+msgstr ""
+
+#. type: Title ===
+#: documentation/content/en/books/porters-handbook/security/_index.adoc:318
+#, no-wrap
+msgid "Cross-checking Derivatives"
+msgstr ""
+
+#. type: Plain text
+#: documentation/content/en/books/porters-handbook/security/_index.adoc:325
+msgid ""
+"If an upstream project has a known vulnerability, check whether derivatives "
+"or forks of the project included in the ports tree are also affected.  For "
+"example, if a vulnerability is discovered in package:www/firefox[], assess "
+"whether derivatives like package:www/librewolf[], package:www/waterfox[] or "
+"other similar projects share the same vulnerability. Include all affected "
+"derivatives in the VuXML entry, ensuring that users of these ports are "
+"informed."
 msgstr ""
