pt-br/articles/vinum: Sync with en 90a1c09

--- a/documentation/content/pt-br/articles/vinum/_index.adoc
+++ b/documentation/content/pt-br/articles/vinum/_index.adoc
@@ -48,6 +48,12 @@ Um método é através do uso de vários discos, e às vezes discos redundantes.
 
 Este capítulo fornece uma visão geral dos possíveis problemas com o armazenamento em disco tradicional e uma introdução ao gerenciador de volumes [.filename]#vinum#.
 
+[WARNING]
+====
+vinum está obsoleto e não está presente no FreeBSD 15.0 e posteriores.
+Os usuários são aconselhados a migrar para man:gconcat[8], man:gmirror[8], man:gstripe[8], man:graid[8], ou man:zfs[8].
+====
+
 [NOTE]
 ====
 Começando com o FreeBSD 5, o [.filename]#vinum# foi reescrito para se encaixar na extref:{handbook}geom[Arquitetura GEOM, geom], mantendo as idéias originais, a terminologia e os metadados no disco. Esta reescrita é chamada _gvinum_ (para _GEOM vinum_). Enquanto este capítulo usa o termo [.filename]#vinum#, qualquer invocação de comandos deve ser executada com o `gvinum`. O nome do módulo do kernel mudou do original [.filename]#vinum.ko# para [.filename]#geom_vinum.ko#, e todos os device nodes residem em [.filename]#/dev/gvinum# em vez de [.filename]#/dev/vinum#. A partir do FreeBSD 6, a implementação original do [.filename]#vinum# não está mais disponível no código base.
